--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,3 +4,5 @@ services:
     image: "github.com/yxwzaxns/cider-ci-test:latest"
     ports:
       - "127.0.0.1:8888:80/tcp"
+	volumes:
+     - "/tmp/vo:/usr/share/nginx/html"
